17th May 2024 UI Fixes (#1844)
* Fix volume slider/ UI to prevent updating before api call has completed, now responds with volume change in real time during touch slide (fixes player mode control - remote to follow)

* fix info-box positioning after form select elements

* prevent form controls from overspilling containing div on small width screens

* fix for top border display on BB Pixel Strings output on chromium based browser

* ensure any existing instances of pinned controls removed before loading - fixes issues when changing between fpp modes

* little extra padding on player controls

* code cleanup and remove debugging on volume control updates

* disable the repeat chk box on index.php when sequence playing

--- a/www/css/fpp-bootstrap/src/fpp-bootstrap-5-3.scss
+++ b/www/css/fpp-bootstrap/src/fpp-bootstrap-5-3.scss
@@ -316,11 +316,14 @@ input[type=checkbox], .form-inline input[type=checkbox]{
     }
 }
 input[type=checkbox]:checked{
-
-
 	border:1px solid #56B760;
-
 	background: #56B760 url(/images/redesign/check-white.svg) no-repeat;
+	background-position: center center;
+}
+
+input[type=checkbox][disabled=""]:checked {
+	border:1px solid #969996;
+	background: #bdd3bf url(/images/redesign/check-white.svg) no-repeat;
 	background-position: center center;
 }
 .nav-pills{
@@ -763,6 +766,9 @@ table.settingsTable div.th{
 }
 .fppSelectableRowTable>tbody>tr:first-child>td:last-child, #tblSchedule>tbody>tr:first-child>td:nth-last-child(2) {
 	border-top-right-radius: 8px;
+    border-top-color: lightgray;
+    border-top-style: inherit;
+    border-top-width: 0.15em;
 }
 .fppSelectableRowTable>tbody>tr:last-child>td{
 	border-bottom: none;
@@ -915,4 +921,7 @@ input[type=file]::file-selector-button {
 input[type=file]::file-selector-button:hover {
     background-color: #171720;
     color: #FFFFFF;
+}
+.form-select {
+    display:inline-block;
 }
